kubernetes/dify-o2cas-adapter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sso    # 酌情修改

---

apiVersion: v1
kind: Service
metadata:
  name: o2cas-adapter
  namespace: sso
spec:
  selector:
    app: o2cas-adapter
  ports:
  - protocol: TCP
    port: 80            # 修改后需要同步修改ingress中配置
    targetPort: 8080    # 保持不动

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: o2cas-adapter
  namespace: sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: o2cas-adapter
  template:
    metadata:
      labels:
        app: o2cas-adapter
    spec:
      restartPolicy: Always
      containers:
      - name: o2cas-adapter
        image: myg133/o2cas-adapter:latest
        imagePullPolicy: Always
        resources:
          # 资源
          requests:
            # 请求资源
            memory: "1Gi"
            cpu: "0.5"
          limits:
            # 最新资源
            memory: "2Gi"
            cpu: "2.0"
        ports:
        - containerPort: 8080                   # 保持不动
        volumeMounts:
        - name: mapping
          mountPath: "/app/config"
      volumes:
      - name: mapping
        configMap:
          name: o2cas-config-file
          items:
          - key: "config.toml"
            path: "config.toml"

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: o2cas-auth-ing
  namespace: sso
spec:
  rules:
  - host: o2cas.domain  # 域名需要修改
    http:
      paths:
      - backend:
          service:
            name: o2cas-adapter
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
